<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivitea">

    <EditText
        android:id="@+id/登錄電郵"
        android:layout_width="255dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/登錄密碼"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView照片" />

    <EditText
        android:id="@+id/登錄密碼"
        android:layout_width="256dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/登錄按鍵"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/登錄電郵" />

    <ImageView
        android:id="@+id/imageView照片"
        android:layout_width="358dp"
        android:layout_height="318dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/登錄電郵"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login" />

    <Button
        android:id="@+id/登錄按鍵"
        android:layout_width="136dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/什麼顏色"
        android:text="@string/blablabla"
        app:layout_constraintBottom_toTopOf="@+id/新來的"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/登錄密碼" />

    <TextView
        android:id="@+id/新來的"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:text="@string/新來的"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/忘了密碼的"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/登錄按鍵" />

    <TextView
        android:id="@+id/忘了密碼的"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="20dp"
        android:text="@string/忘記什麼鬼密碼的"
        android:textColor="#F1F5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/新來的" />


</androidx.constraintlayout.widget.ConstraintLayout>