<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:backgroundTint="@android:color/white"
    tools:context=".Register">



    <EditText
        android:id="@+id/登錄電郵"
        android:layout_width="309dp"
        android:layout_height="44dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="51dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/密碼"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/羅狗"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/密碼"
        android:layout_width="309dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/姓名"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/登錄電郵"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/姓名"
        android:layout_width="309dp"
        android:layout_height="45dp"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="118dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/註冊"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/密碼" />

    <TextView
        android:id="@+id/咖啡"
        android:layout_width="349dp"
        android:layout_height="19dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/密碼"
        app:layout_constraintVertical_bias="0.934" />

    <ImageView
        android:id="@+id/羅狗"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="照片"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/starlabs" />

    <Button
        android:id="@+id/註冊"
        android:layout_width="175dp"
        android:layout_height="58dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/什麼顏色"
        android:text="@string/Register"
        app:layout_constraintBottom_toTopOf="@+id/咖啡"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/姓名" />

</androidx.constraintlayout.widget.ConstraintLayout>