<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPassword">

    <EditText
        android:id="@+id/名_reset"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginTop="61dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/電郵_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starlab" />

    <ImageView
        android:id="@+id/starlab"
        android:layout_width="208dp"
        android:layout_height="100dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/名_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/重設密碼"
        app:srcCompat="@mipmap/starlabs" />

    <EditText
        android:id="@+id/電郵_reset"
        android:layout_width="227dp"
        android:layout_height="44dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="188dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/名_reset" />

    <Button
        android:id="@+id/發送"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_marginTop="71dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/reset_passw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/電郵_reset" />

    <TextView
        android:id="@+id/重設密碼"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="30dp"
        android:text="@string/reset_passw"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/starlab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>