<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context=".MainPage">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="352dp"
        android:layout_height="108dp"
        android:src="@mipmap/shit"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="113dp" />

    <Button
        android:id="@+id/設置"
        android:layout_width="21dp"
        android:layout_height="23dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="7dp"
        android:background="@mipmap/gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/消息"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:background="@mipmap/speaker"
        tools:layout_editor_absoluteX="218dp"
        tools:layout_editor_absoluteY="429dp" />

    <Button
        android:id="@+id/我"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:background="@mipmap/book"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="471dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="43dp"
        android:layout_height="20dp"
        android:text="@string/News"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="223dp"
        tools:layout_editor_absoluteY="473dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TopUp"
        android:textColor="@android:color/white"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="473dp" />

    <Button
        android:id="@+id/充值"
        android:layout_width="48dp"
        android:layout_height="45dp"
        android:background="@mipmap/reload"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="428dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:text="@string/main"
        android:textColor="@android:color/white"
        android:textSize="0.07in"
        tools:ignore="SmallSp"
        tools:layout_editor_absoluteX="90dp"
        tools:layout_editor_absoluteY="406dp" />

    <Button
        android:id="@+id/轉回"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:background="@mipmap/previous"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="318dp" />

    <Button
        android:id="@+id/停"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:background="@mipmap/stop"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="318dp" />

    <Button
        android:id="@+id/向前"
        android:layout_width="66dp"
        android:layout_height="62dp"
        android:background="@mipmap/forward"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="318dp" />

    <Button
        android:id="@+id/播放"
        android:layout_width="190dp"
        android:layout_height="87dp"
        android:background="@mipmap/blek"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="221dp" />

    <Button
        android:id="@+id/網站"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:background="@mipmap/web"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="502dp" />

    <Button
        android:id="@+id/面子書"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:background="@mipmap/fb"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="502dp" />

    <Button
        android:id="@+id/微信"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:background="@mipmap/ws"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="502dp" />

    <TextView
        android:id="@+id/kopi_right"
        android:layout_width="260dp"
        android:layout_height="9dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="7dp"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="581dp" />

    <Button
        android:id="@+id/ble_switch"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@mipmap/bluoootoof"
        android:onClick="ble_on_of"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connected"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/ble_switch"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cc"
        android:layout_width="47dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:onClick="cc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ble_switch" />


</androidx.constraintlayout.widget.ConstraintLayout>